project/force-app/main/default/objects/Product2/Product2.object-meta.xml
<CustomObject>
    <label>Retail Outlet / RO</label>
    <pluralLabel>Retail Outlet / RO</pluralLabel>
    <nameField>
        <label>RO Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>