project/force-app/main/default/objects/Product2/fields/Actual_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Opening_Date__c</fullName>
    <description>Ngày Khai Trương của Gian Hàng tại trung tâm;</description>
    <label>Actual Opening Date</label>
    <type>Date</type>
</CustomField>