project/force-app/main/default/objects/Product2/fields/Additional_Usable_Area__c.field-meta.xml
<CustomField>
    <fullName>Additional_Usable_Area__c</fullName>
    <description>Help Text: (m2)</description>
    <label>Additional Usable Area</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>