project/force-app/main/default/objects/Product2/fields/Air_Conditioning_Fee_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_Fee_m2_Month__c</fullName>
    <description>Tích hợp SAP</description>
    <label>Budget Air Condition Fee (USD/m2/Month)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>