project/force-app/main/default/objects/Product2/fields/Air_Conditioning_Fee_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_Fee_VND_m2_Month__c</fullName>
    <description>Read Only;
= NS Phí Điều Hoà (USD/m2/Tháng) * Tỉ gía</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Air Condition Fee (VND/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>