project/force-app/main/default/objects/Product2/fields/Amount_Support_Outdoor_Price__c.field-meta.xml
<CustomField>
    <fullName>Amount_Support_Outdoor_Price__c</fullName>
    <description>Help Text: USD
-  Tổng Tiền Hỗ Trợ Ngoài Trời Thực Tế = Đơn Giá Thuê Ngoài Trời * Số Tháng Hỗ Trợ Ngoài Trời NS * DT Ngoài Trời</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Support Outdoor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>