project/force-app/main/default/objects/Product2/fields/Amount_Support_Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Amount_Support_Rent_Price__c</fullName>
    <description>Help Text: USD
-  Tổng Tiền Hỗ Trợ Tiền Thuê NS = Đơn Giá Thuê NS * Số Tháng Hỗ Trợ Tiền Thuê NS * Tổng DT GFA</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Support Rent Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>