project/force-app/main/default/objects/Product2/fields/Amount_Support_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Amount_Support_Service_Fee__c</fullName>
    <description>Help Text: USD
- Read only 
- Tổng Tiền Hỗ Trợ PDV NS= Đơn Giá PDV NS * Số Tháng Hỗ Trợ PDV NS * Tổng DT GFA</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Support Service Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>