project/force-app/main/default/objects/Product2/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <label>Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
                <default>true</default>
                <label>Indoor</label>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Common Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>