project/force-app/main/default/objects/Product2/fields/Budget_AD_Unit_Price_USD_Unit__c.field-meta.xml
<CustomField>
    <fullName>Budget_AD_Unit_Price_USD_Unit__c</fullName>
    <label>Budget AD Unit Price (USD/Unit)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>