project/force-app/main/default/objects/Product2/fields/Budget_AD_Unit_Price_VND_Unit__c.field-meta.xml
<CustomField>
    <fullName>Budget_AD_Unit_Price_VND_Unit__c</fullName>
    <description>= Đơn Giá Quảng Cáo NS (USD/Đơn Vị) * Tỉ giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget AD Unit Price (VND/Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>