project/force-app/main/default/objects/Product2/fields/Budget_Capex_Support_Area_m2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Capex_Support_Area_m2__c</fullName>
    <label>Budget Capex Support Area (m2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>