project/force-app/main/default/objects/Product2/fields/Budget_Capex_Support_Floor_2nd__c.field-meta.xml
<CustomField>
    <fullName>Budget_Capex_Support_Floor_2nd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Capex Support Floor 2nd</label>
    <type>Checkbox</type>
</CustomField>