project/force-app/main/default/objects/Product2/fields/Budget_Capex_Support_Floor_4th__c.field-meta.xml
<CustomField>
    <fullName>Budget_Capex_Support_Floor_4th__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Capex Support Floor 4th</label>
    <type>Checkbox</type>
</CustomField>