project/force-app/main/default/objects/Product2/fields/Budget_Rent_Price_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Rent_Price_USD_m2_Month__c</fullName>
    <description>Tích hợp SAP RE</description>
    <label>Budget Rent Price (USD/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>