project/force-app/main/default/objects/Product2/fields/Budget_Rent_Price_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Rent_Price_VND_m2_Month__c</fullName>
    <description>Do Admin set up tỉ giá
Formula Đơn Giá NS/Tỉ giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Rent Price (VND/m2/Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>