project/force-app/main/default/objects/Product2/fields/Budget_Renting_Outdoor_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Renting_Outdoor_USD_m2_Month__c</fullName>
    <label>Budget Renting Outdoor (USD/m2/Month)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>