project/force-app/main/default/objects/Product2/fields/Budget_Renting_Outdoor_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Renting_Outdoor_VND_m2_Month__c</fullName>
    <description>Read Only;
= Đơn Giá NS Ngoài Trời (USD/m2/Tháng) * Tỉ giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Renting Outdoor (VND/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>