project/force-app/main/default/objects/Product2/fields/Budget_Service_Fee_USD_m2_month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Service_Fee_USD_m2_month__c</fullName>
    <label>Budget Service Fee (USD/m2/Month)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>