project/force-app/main/default/objects/Product2/fields/Budget_Support_Norm_VND_m2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Support_Norm_VND_m2__c</fullName>
    <label>Budget Support Norm (VND/m2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>