project/force-app/main/default/objects/Product2/fields/Budget_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Support_Type__c</fullName>
    <label>Budget Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Rent Price</fullName>
                <default>true</default>
                <label>Free Rent Price</label>
            </value>
            <value>
                <fullName>Free Service Fee</fullName>
            </value>
            <value>
                <fullName>Free Rent Price &amp; Service Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>