project/force-app/main/default/objects/Product2/fields/Building_Owner__c.field-meta.xml
<CustomField>
    <fullName>Building_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owners</relationshipLabel>
    <relationshipName>Building_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>