project/force-app/main/default/objects/Product2/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <description>Chú thích: Mã BE nếu có RO đã tạo bên SAP thì sẽ khoá mã &amp; không cho chỉnh sửa</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Entity Name</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Business Entity Names</relationshipLabel>
    <relationshipName>Business_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>