project/force-app/main/default/objects/Product2/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Mã Công ty của VIN;
Hiển thị dữ liệu Mã Công Ty từ Business Entity;
Chú thích:
- Company Code của Account trên Business Entity từ RO;
- Company Code trên Account Pháp Nhân nếu có RO đã tạo bên SAP thì sẽ khoá mã &amp; không cho chỉnh sửa</description>
    <formula>Business_Entity__r.Company_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
    <label>Company Code</label>
</CustomField>