project/force-app/main/default/objects/Product2/fields/Customer_Service_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Customer Service Specialists</relationshipLabel>
    <relationshipName>Customer_Service_Specialist</relationshipName>
    <type>Lookup</type>
</CustomField>