project/force-app/main/default/objects/Product2/fields/Director_of_Management__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director of Management</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Director of Managements</relationshipLabel>
    <relationshipName>Director_of_Management</relationshipName>
    <type>Lookup</type>
</CustomField>