project/force-app/main/default/objects/Product2/fields/Estimated_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Opening_Date__c</fullName>
    <description>Ngày Khai Trương của Gian Hàng tại trung tâm;
Tích hợp SAP</description>
    <label>Estimated Opening Date</label>
    <type>Date</type>
</CustomField>