project/force-app/main/default/objects/Product2/fields/Floor_1st_Budget_Capex_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_1st_Budget_Capex_Price__c</fullName>
    <description>Help Text: (VNĐ/m2)</description>
    <label>Floor 1st Budget Capex Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>