project/force-app/main/default/objects/Product2/fields/GFA_Area_Floor_1__c.field-meta.xml
<CustomField>
    <fullName>GFA_Area_Floor_1__c</fullName>
    <description>Help Text: (m2)</description>
    <label>GFA Area Floor 1</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>