project/force-app/main/default/objects/Product2/fields/GFA_Area_m2__c.field-meta.xml
<CustomField>
    <fullName>GFA_Area_m2__c</fullName>
    <description>Read Only;
Tổng Diện Tích GFA = Tổng Diện tích GFA 5 lầu
Help Text: (m2)</description>
    <formula>GFA_Area_Floor_1__c + GFA_Area_Floor_2__c + GFA_Area_Floor_3__c + GFA_Area_Floor_4__c + GFA_Area_Floor_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GFA Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>