project/force-app/main/default/objects/Product2/fields/List_Price_Budget_Business_Plan_USD__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Budget_Business_Plan_USD__c</fullName>
    <description>Tích hợp BPC</description>
    <label>List Price Budget Business Plan (USD)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>