project/force-app/main/default/objects/Product2/fields/List_Price_Budget_Business_Plan_VND__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Budget_Business_Plan_VND__c</fullName>
    <description>Read Only;
 = Đơn Giá NS Theo Kế Hoạch Kinh Doanh (USD) * Tỉ giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Budget Business Plan (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>