project/force-app/main/default/objects/Product2/fields/Location_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Location_Evaluation__c</fullName>
    <label>Location Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nice</fullName>
                <default>true</default>
                <label>Nice</label>
            </value>
            <value>
                <fullName>Decent</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>