project/force-app/main/default/objects/Product2/fields/Number_Of_Outdoor_Support_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Outdoor_Support_Months__c</fullName>
    <label>Number Of Outdoor Support Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>