project/force-app/main/default/objects/Product2/fields/Number_Support_Month_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Number_Support_Month_Service_Fee__c</fullName>
    <description>HelpText: Tháng</description>
    <label>Number Support Month Service Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>