project/force-app/main/default/objects/Product2/fields/Official_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Official_Confirmation_Status__c</fullName>
    <description>Tích hợp trả về API thành công thì cập nhật là Đã Tạo; Default là Chưa Tạo
Help Text: 
Gian Hàng và Vị Trí Quảng Cáo là Trạng Thái SAP Shophouse là dữ liệu được xác nhận bởi Sales Admin</description>
    <label>Official Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Not Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>