project/force-app/main/default/objects/Product2/fields/Open_Use_Area__c.field-meta.xml
<CustomField>
    <fullName>Open_Use_Area__c</fullName>
    <description>Help Text: (m2)</description>
    <label>Open Use Area</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>