project/force-app/main/default/objects/Product2/fields/Outdoor_Area__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Area__c</fullName>
    <description>Read Only;
Diện Tích Ngoài Trời = Diện Tích Sử Dụng Bổ Sung + Diện Tích Sử Dụng Mở + Diện Tích Vỉa Hè
Help Text: (m2)</description>
    <formula>Additional_Usable_Area__c + Open_Use_Area__c + Sidewalk_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outdoor Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>