project/force-app/main/default/objects/Product2/fields/Outdoor_Area_In_Of_Boundaries__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Area_In_Of_Boundaries__c</fullName>
    <description>= Diện Tích Sử Dụng Bổ Sung + Diện Tích Sử Dụng Mở</description>
    <label>Outdoor Area (In Of Boundaries)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>