project/force-app/main/default/objects/Product2/fields/Outdoor_Support_Amount_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Support_Amount_VND_Month__c</fullName>
    <label>Outdoor Support Amount (VND/Month)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>