project/force-app/main/default/objects/Product2/fields/Renewal_Ability_Review__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Ability_Review__c</fullName>
    <description>Read Only
Lấy từ Hợp Đồng</description>
    <label>Renewal Ability Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue Renewal</fullName>
                <default>true</default>
                <label>Continue Renewal</label>
            </value>
            <value>
                <fullName>Capable of Liquidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>