project/force-app/main/default/objects/Product2/fields/Rent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Rent_Budget__c</fullName>
    <description>= Đơn Giá NS (VND) * Tổng Diện Tích GFA</description>
    <formula>Budget_Rent_Price_VND_m2_Month__c * Total_Area_m2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>