project/force-app/main/default/objects/Product2/fields/Rental_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Status__c</fullName>
    <description>Sẽ có Automation trigger trên các đối tượng Cơ Hội, Cơ Hội Hỏi Thuê, Hợp Đồng và Hợp Đồng Chi Tiết
 + Trống: khi không có Cơ Hội, Cơ Hội Sản Phẩm, Hợp Đồng ở trạng thái Thanh Lý nào
 + Khảo sát: khi chỉ có Cơ hội, Sản Phẩm Cơ Hội của Cơ Hội đang ở giai đoạn Chào Khách, Khảo Sát
 + Đang đàm phán: khi chỉ có Cơ hội, Sản Phẩm Cơ Hội của Cơ Hội đang ở giai đoạn Đàm Phán
 + Chốt: khi chỉ có Cơ hội, Sản Phẩm Cơ Hội của Cơ Hội đang ở giai đoạn Chốt Khách, OTL
 + Cam kết thuê (cọc): khi chỉ có Cơ hội, Sản Phẩm Cơ Hội của Cơ Hội đang ở giai đoạn Cọc
 + Đã cho thuê: khi có Hợp Đồng, Hợp Đồng Chi Tiết trong Hợp Đồng không ở trạng thái là Thanh Lý</description>
    <label>Rental Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
                <default>true</default>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>Surveying</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>