project/force-app/main/default/objects/Product2/fields/RO_Advertising_Type_Level_1__c.field-meta.xml
<CustomField>
    <fullName>RO_Advertising_Type_Level_1__c</fullName>
    <label>RO Advertising Type Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
                <default>true</default>
                <label>Picklist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>