project/force-app/main/default/objects/Product2/fields/RO_Unit__c.field-meta.xml
<CustomField>
    <fullName>RO_Unit__c</fullName>
    <label>RO Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>m2</fullName>
                <default>true</default>
                <label>m2</label>
            </value>
            <value>
                <fullName>booth</fullName>
            </value>
            <value>
                <fullName>kiosk</fullName>
            </value>
            <value>
                <fullName>unit</fullName>
            </value>
            <value>
                <fullName>location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>