project/force-app/main/default/objects/Product2/fields/SAP_RO_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_RO_Id__c</fullName>
    <description>External Id (Mã tự sinh bên SAP) SF lưu trữ thông tin này
Read Only Layout</description>
    <externalId>true</externalId>
    <label>SAP RO Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>