project/force-app/main/default/objects/Product2/fields/SF_RO_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_RO_Id__c</fullName>
    <description>Khai báo theo cú pháp &quot;Company Code + Mã TTTM+ Name of RO&quot;, không có khoảng trắng (Ghép chuỗi, bỏ ký tự trắng giữa 3 field này)</description>
    <externalId>true</externalId>
    <label>SF RO Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>