project/force-app/main/default/objects/Product2/fields/Support_Voucher_Amount_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Support_Voucher_Amount_VND_Month__c</fullName>
    <label>Support Voucher Amount (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>