project/force-app/main/default/objects/Product2/fields/Tenant_Mix_1__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Mix_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant Mix 1</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Products (Tenant Mix 1)</relationshipLabel>
    <relationshipName>Products_Tenant_Mix_1</relationshipName>
    <type>Lookup</type>
</CustomField>