project/force-app/main/default/objects/Product2/fields/Tenant_Mix_2__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Mix_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant Mix 2</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Products (Tenant Mix 2)</relationshipLabel>
    <relationshipName>Products_Tenant_Mix_2</relationshipName>
    <type>Lookup</type>
</CustomField>