project/force-app/main/default/objects/Product2/fields/Tenant_Mix_3__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Mix_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant Mix 3</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Products (Tenant Mix 3)</relationshipLabel>
    <relationshipName>Products_Tenant_Mix_3</relationshipName>
    <type>Lookup</type>
</CustomField>