project/force-app/main/default/objects/Product2/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <description>Diện Tích GFA + Diện Tích Ngoài Trời;
Tích hợp SAP S4</description>
    <label>Total Area</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>