project/force-app/main/default/objects/Product2/fields/Total_Area_m2__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_m2__c</fullName>
    <description>Read Only;
Tổng Diện Tích = Tổng Diện Tích GFA (m2) + Diện Tích Ngoài Trời (m2)
Help Text: (m2)</description>
    <formula>GFA_Area_m2__c + Outdoor_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>